--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans&family=Secular+One&display=swap" rel="stylesheet">
-  <title>to-do</title>
+  <title>Memo</title>
 </head>
 
 <body>
