--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="manifest" href="manifest.json" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <title>Tusks</title>
+  <title>Hashtag</title>
 </head>
 
 <body>
